Styling markdown headlines through css, rather than jquery. Summary no longer visible in live view.

--- a/src/site/static/scss/arbital.scss
+++ b/src/site/static/scss/arbital.scss
@@ -120,7 +120,7 @@ span.md-warn {
 }
 
 // Markdown header 1
-.md-display-2 {
+.md-display-2, .preview-area h1 {
 	font-family: "Roboto Slab";
 	font-size: 2rem;
 	line-height: 2.2rem;
@@ -130,7 +130,7 @@ span.md-warn {
 }
 
 // Markdown header 2
-.md-display-1 {
+.md-display-1, .preview-area h2 {
 	font-size: 1.5rem;
 	line-height: 1.7rem;
 	font-weight: 300;
@@ -139,7 +139,7 @@ span.md-warn {
 }
 
 // Markdown header 3
-.md-headline {
+.md-headline, .preview-area h3 {
 	font-size: 1.3rem;
 	line-height: 1.5rem;
 	font-weight: 700;
